restructuring the footer quicklink

--- a/shop_cart.html
+++ b/shop_cart.html
@@ -26,37 +26,7 @@
 <body>
   <div id="main">
     <header>
-      <div class="header-block d-flex align-items-center">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-md-6">
-              <div class="header-left d-flex flex-column flex-md-row align-items-center">
-                <p class="d-flex align-items-center"><i class="fas fa-envelope"></i>info@gmail.com</p>
-                <p class="d-flex align-items-center"><i class="fas fa-phone"></i>+234456789999</p>
-              </div>
-            </div>
-            <div class="col-12 col-md-6">
-              <div
-                class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
-                <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
-                      class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
-                      class="fab fa-pinterest-p"> </i></a></div>
-                <div class="language">
-                  <div class="selected-language"><img src="assets/images/homepage01/usa.jpg" alt="">English<i
-                      class="arrow_carrot-down"></i>
-                    <ul class="list-language">
-                      <li><img src="assets/images/homepage01/usa.jpg" alt="">English</li>
-                      <li><img src="assets/images/homepage01/usa.jpg" alt="">Spain</li>
-                      <li><img src="assets/images/homepage01/usa.jpg" alt="">Japan</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="login d-flex"><a href="login.html"><i class="fas fa-user"></i>Login</a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <nav class="navigation d-flex align-items-center">
         <div class="container">
           <div class="row">
@@ -73,8 +43,6 @@
                   <li class="toggleable">
                     <a class="menu-item" href="javascript:void()">Pages</a>
                     <ul class="sub-menu">
-                      <li><a href="login.html">login</a></li>
-                      <li><a href="register.html">register</a></li>
                       <li><a href="FAQ.html">FAQ</a></li>
                       <li><a href="contact_us.html">contact us</a></li>
                     </ul>
@@ -123,8 +91,6 @@
                         <a class="menu-item" href="javascript:void()">Pages</a>
                         <span class="sub-menu--expander"><i class="icon_plus"></i></span>
                         <ul class="sub-menu">
-                          <li><a href="login.html">login</a></li>
-                          <li><a href="register.html">register</a></li>
                           <li><a href="FAQ.html">FAQ</a></li>
                           <li><a href="about_us.html">about us</a></li>
                           <li><a href="contact_us.html">contact us</a></li>
@@ -133,7 +99,6 @@
                     </ul>
                   </div>
                   <div class="mobile-login">
-                    <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
                   </div>
                   <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i
                         class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i
@@ -281,24 +246,19 @@
           </div>
           <div class="col-md-8">
             <div class="row">
-              <div class="col-12 col-sm-4 text-sm-center text-md-left">
+              <div class="col-12 col-sm-6 text-sm-center text-md-left">
                 <div class="footer-quicklink">
                   <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a
                     href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                 </div>
               </div>
-              <div class="col-12 col-sm-4 text-sm-center text-md-left">
+              <div class="col-12 col-sm-6 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                  <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a
+                  <h5>My Account</h5><a href="contact_us.html">Contact</a><a
                     href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                 </div>
               </div>
-              <div class="col-12 col-sm-4 text-sm-center text-md-left">
-                <div class="footer-quicklink">
-                  <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a
-                    href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
