--- a/contact_us.html
+++ b/contact_us.html
@@ -176,7 +176,7 @@
             <p>Our staff will call back later and answer your questions.</p>
 
 
-            <form id="contact-form">
+            <!--<form id="contact-form">
                   <input type="hidden" name="contact_number">
                   
                   <div class="col-12 col-md-12">
@@ -200,7 +200,46 @@
                   </div>
                   </div>
                 </div>
-            </form>
+            </form>-->
+
+            <!-- Form Started -->
+              <div class="container form-top">
+                <div class="row">
+                  <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
+                    <div class="panel panel-danger">
+                      <div class="panel-body">
+                        <form id="reused_form">
+                          <div class="form-group">
+                            <label><i class="fa fa-user" aria-hidden="true"></i> Name</label>
+                            <input type="text" name="name" class="form-control" placeholder="Enter Name">
+                          </div>
+                          <div class="form-group">
+                            <label><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
+                            <input type="email" name="email" class="form-control" placeholder="Enter Email" >
+                          </div>
+                          <div class="form-group">
+                            <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
+                            <textarea rows="3" name="message" class="form-control" placeholder="Type Your Message" maxlength="6000" required></textarea>
+                          </div>
+
+
+                          <div class="form-group">
+                            <button class="btn btn-raised btn-block btn-danger">Post →</button>
+                          </div>
+                        </form>
+                        <div id="error_message" style="width:100%; height:100%; display:none; ">
+                        <h4>Error</h4>
+                        Sorry there was an error sending your form.
+                        </div>
+                        <div id="success_message" style="width:100%; height:100%; display:none; ">
+                        <h2>Success! Your Message was Sent Successfully.</h2>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <!-- Form Ended -->
           </div>
         </div>
       </div>
@@ -283,21 +322,101 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
-    <script type="text/javascript">
-        (function(){
-          emailjs.init('YOUR_USER_ID');
-        })();
-    </script>
-    <script type="text/javascript">
-        window.onload = function() {
-            document.getElementById('contact-form').addEventListener('submit', function(event) {
-                event.preventDefault();
-                // generate the contact number value
-                this.contact_number.value = Math.random() * 100000 | 0;
-                emailjs.sendForm('contact_service', 'contact_form', this);
-            });
+
+    <script>
+    $(function()
+    {
+        function after_form_submitted(data)
+        {
+            if(data.result == 'success')
+            {
+                $('form#reused_form').hide();
+                $('#success_message').show();
+                $('#error_message').hide();
+            }
+            else
+            {
+                $('#error_message').append('<ul></ul>');
+
+                jQuery.each(data.errors,function(key,val)
+                {
+                    $('#error_message ul').append('<li>'+key+':'+val+'</li>');
+                });
+                $('#success_message').hide();
+                $('#error_message').show();
+
+                //reverse the response on the button
+                $('button[type="button"]', $form).each(function()
+                {
+                    $btn = $(this);
+                    label = $btn.prop('orig_label');
+                    if(label)
+                    {
+                        $btn.prop('type','submit' );
+                        $btn.text(label);
+                        $btn.prop('orig_label','');
+                    }
+                });
+
+            }//else
         }
+
+      $('#reused_form').submit(function(e)
+          {
+            e.preventDefault();
+
+            $form = $(this);
+            //show some response on the button
+            $('button[type="submit"]', $form).each(function()
+            {
+                $btn = $(this);
+                $btn.prop('type','button' );
+                $btn.prop('orig_label',$btn.text());
+                $btn.text('Sending ...');
+            });
+
+
+                        $.ajax({
+                    type: "POST",
+                    url: 'handler.php',
+                    data: $form.serialize(),
+                    success: after_form_submitted,
+                    dataType: 'json'
+                });
+
+          });
+    });
     </script>
-  
+
+    <script>
+    <?php
+    ini_set('display_errors', 1);
+    ini_set('display_startup_errors', 1);
+    error_reporting(E_ALL);
+    /*
+    Tested working with PHP5.4 and above (including PHP 7 )
+
+    */
+    require_once './vendor/autoload.php';
+
+    use FormGuide\Handlx\FormHandler;
+
+
+    $pp = new FormHandler();
+
+    $validator = $pp->getValidator();
+    $validator->fields(['name','email'])->areRequired()->maxLength(50);
+    $validator->field('email')->isEmail();
+    $validator->field('comments')->maxLength(6000);
+
+
+
+
+    $pp->sendEmailTo('someone@gmail.com'); // ← Your email here
+
+    echo $pp->process($_POST);
+
+    </script>
+   
   </body>
 </html>
