restructuring the footer quicklink

--- a/login.html
+++ b/login.html
@@ -189,25 +189,26 @@
                 <p>Phone: +234456789999</p>
                 <p>Email: info@gmail.com</p>
               </div>
-              <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-pinterest-p"></i></a></div>
+              <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a
+                  class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i
+                    class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i
+                    class="fab fa-pinterest-p"></i></a></div>
             </div>
             <div class="col-md-8">
               <div class="row">
-                <div class="col-12 col-sm-4 text-sm-center text-md-left">
+                <div class="col-12 col-sm-6 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
+                    <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a
+                      href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                   </div>
                 </div>
-                <div class="col-12 col-sm-4 text-sm-center text-md-left">
+                <div class="col-12 col-sm-6 text-sm-center text-md-left">
                   <div class="footer-quicklink">
-                    <h5>My Account</h5><a href="login.html">My Account</a><a href="contact.html">Contact</a><a href="shop_shop_cart.html">Shopping cart</a><a href="shop_grid+list_3col.html">Shop</a>
+                    <h5>My Account</h5><a href="contact_us.html">Contact</a><a
+                      href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                   </div>
                 </div>
-                <div class="col-12 col-sm-4 text-sm-center text-md-left">
-                  <div class="footer-quicklink">
-                    <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact.html">Contact</a><a href="about_us.html">Service</a>
-                  </div>
-                </div>
+              
               </div>
             </div>
           </div>
