--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -281,22 +281,18 @@
                 <div class="footer-social"><a class="round-icon-btn" href=""><i class="fab fa-facebook-f"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-twitter"></i></a><a class="round-icon-btn" href=""><i class="fab fa-invision"> </i></a><a class="round-icon-btn" href=""><i class="fab fa-pinterest-p"></i></a></div>
               </div>
               <div class="col-lg-8 col-xl-9">
-                <div class="row no-gutters justify-content-md-center justify-content-lg-between">
-                  <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
+                <div class="row no-gutters justify-content-md-center justify-content-sm-center justify-content-lg-between">
+                  <div class="col-12 col-sm-6 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
                       <h5>Infomation</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
                     </div>
                   </div>
-                  <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
+                  <div class="col-12 col-sm-6 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
                     <div class="footer-quicklink">
                       <h5>My Account</h5><a href="login.html">My Account</a><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
                     </div>
                   </div>
-                  <div class="col-12 col-sm-4 col-lg-4 col-xl-2 col-xxl-3 text-sm-center text-lg-left">
-                    <div class="footer-quicklink">
-                      <h5>Quick Shop</h5><a href="about_us.html">About us</a><a href="checkout.html">Check out</a><a href="contact_us.html">Contact</a><a href="about_us.html">Service</a>
-                    </div>
-                  </div>
+                  
                   <div class="col-12 col-md-8 col-lg-8 col-xl-6 col-xxl-3 text-sm-center text-lg-left">
                     <div class="newletter newletter_v2">
                       <div class="newletter_text">
