--- a/Homepage.html
+++ b/Homepage.html
@@ -44,7 +44,7 @@
                     </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
 
                 <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Logout
-                    Up</a></div>
+                </a></div>
               </div>
             </div>
           </div>
@@ -143,9 +143,15 @@
                 <a href=""><img src="assets/images/logo.png" alt=""></a></div>
             </div>
             <div class="col-3">
-              <div class="mobile-product_function d-flex align-items-center justify-content-end"><a
-                  class="function-icon icon_heart_alt" href="javascript:void()"></a><a
-                  class="function-icon fa fa-shopping-cart" href="javascript:void()"></a></div>
+              <div class="mobile-product_function d-flex align-items-center justify-content-end">
+              <!--<a class="function-icon icon_heart_alt" href="javascript:void()"></a>-->
+                  <div onclick="router('shop_cart')" id="cartButton" class="function-icon hover mobile-product_function d-flex align-items-center justify-content-end">
+                    <i class="fa fa fa-shopping-cart"></i>
+                    <sup style="top: -.5em">
+                      <span id="cartButtonBadge" class="my-badge badge-success">0</span>
+                    </sup>
+              </div>
+              </div>
               <!--shop_shop_cart.html-->
             </div>
           </div>
