added cartbutton badge to mobile views

--- a/shop1.html
+++ b/shop1.html
@@ -254,7 +254,7 @@
 
                         </div>
                     
-                  <div class="shop-pagination">
+                  <!--<div class="shop-pagination">
                     <ul>
                       <li>
                         <button class="no-round-btn smooth active">1</button>
@@ -269,7 +269,7 @@
                         <button class="no-round-btn smooth"> <i class="arrow_carrot-2right"></i></button>
                       </li>
                     </ul>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
