--- a/shop4.html
+++ b/shop4.html
@@ -326,7 +326,7 @@
 
                         </div>
 
-                  <div class="shop-pagination">
+                  <!--<div class="shop-pagination">
                     <ul>
                       <li>
                         <button class="no-round-btn smooth active">1</button>
@@ -341,7 +341,7 @@
                         <button class="no-round-btn smooth"> <i class="arrow_carrot-2right"></i></button>
                       </li>
                     </ul>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
