added cartbutton badge to mobile views

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -183,8 +183,8 @@
                           <li><a href="#tab-2">SPECIFICATIONS</a></li>
                          </ul>
                         <div id="tab-1">
-                          <div class="description-block">
-                            <div class="description-item_block">
+                          <div id="featuredProducts" class="description-block">
+                            <!--<div class="description-item_block">
                               <div class="row align-items-center justify-content-around">
                                 <div class="col-12 col-md-4">
                                   <div class="description-item_img"><img class="img-fluid" src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="description image"></div>
@@ -200,7 +200,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div>-->
                           </div>
                         </div>
                         
@@ -340,5 +340,18 @@
     <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
 
     <!--<script type="text/javascript" src="assets/js/foodlist.js"></script>-->
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+
+    <!-- Utils -->
+    <script src="js/utils/api-request.js"></script>
+
+    <!-- App Logic -->
+    <script src="js/app.js"></script>
+
+    <!-- Services -->
+
+    <script src="js/services/shopDetails.js"></script>
   </body>
 </html>
