--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
                       <!-- <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
                         <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
+                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span>
+                        </h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">
+                        Shop now</a>
                      -->
                     </div>
                   </div>
