--- a/shop_cart.html
+++ b/shop_cart.html
@@ -212,7 +212,7 @@
           <div class="col-12 col-sm-12 text-center">
             <button id="updateCartButton" class="no-round-btn black cart-update">Upadate cart</button>
             <button id="emptyCartButton" class="no-round-btn black cart-update" onclick="emptyCart()">Empty Cart</button>
-            <button onclick="router('index')" class="no-round-btn black cart-update">Continue Shoping</button>
+            <button onclick="router('Homepage')" class="no-round-btn black cart-update">Continue Shoping</button>
           </div>
         </div>
         <div class="row justify-content-end">
