--- a/shop_cart.html
+++ b/shop_cart.html
@@ -211,7 +211,7 @@
 
           <div class="col-12 col-sm-12 text-center">
             <button id="updateCartButton" class="no-round-btn black cart-update">Upadate cart</button>
-            <button id="emptyCartButton" class="no-round-btn black cart-update" onclick="emptyCart()">Empty Cart</button>
+            <button id="emptyCartButton" class="no-round-btn black cart-update" onclick="emptyCart();handleNoItemsInCart()">Empty Cart</button>
             <button onclick="router('Homepage')" class="no-round-btn black cart-update">Continue Shoping</button>
           </div>
         </div>
