added empty cart

--- a/shop_cart.html
+++ b/shop_cart.html
@@ -210,7 +210,7 @@
           </div>
 
           <div class="col-12 col-sm-12 text-center">
-            <button id="updateCartButton" class="no-round-btn black cart-update" onclick="updateCartButton()">Upadate cart</button>
+            <button id="updateCartButton" class="no-round-btn black cart-update" onclick="updateCartButtons()">Upadate cart</button>
             <button id="emptyCartButton" class="no-round-btn black cart-update" onclick="emptyCart();handleNoItemsInCart()">Empty Cart</button>
             <button onclick="router('Homepage')" class="no-round-btn black cart-update">Continue Shoping</button>
           </div>
