added empty cart

--- a/index.html
+++ b/index.html
@@ -555,6 +555,10 @@
 
   <!-- Services -->
   <script src="js/services/featuredProducts.js"></script>
+
+  <script src="js/services/shopDetails.js"></script>
+
+  
 </body>
 
 </html>
