--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -183,7 +183,7 @@
                           <li><a href="#tab-2">SPECIFICATIONS</a></li>
                          </ul>
                         <div id="tab-1">
-                          <div id="featuredProducts" class="description-block">
+                          <div id="shopDetails" class="description-block">
                             <!--<div class="description-item_block">
                               <div class="row align-items-center justify-content-around">
                                 <div class="col-12 col-md-4">
