added empty cart

--- a/Admin-Dashboard/dashboard.html
+++ b/Admin-Dashboard/dashboard.html
@@ -1371,5 +1371,12 @@
 <script src="dist/js/pages/dashboard.js"></script>
 <!-- IntrioBasket for demo purposes -->
 <script src="dist/js/demo.js"></script>
+
+
+
+<!--Dash INFO-->
+
+<script src="dist/js/dashboardinfo.js"></script>
+
 </body>
 </html>
