--- a/Admin-Dashboard/dashboard.html
+++ b/Admin-Dashboard/dashboard.html
@@ -765,7 +765,7 @@
             </div>
           </div>
           <!-- ./col -->
-          <!--<div class="col-lg-3 col-6">
+          <div class="col-lg-3 col-6">
            
             <div class="small-box bg-warning">
               <div class="inner">
@@ -778,7 +778,7 @@
               </div>
               <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
-          </div>-->
+          </div>
           <!-- ./col -->
           <div class="col-lg-3 col-6">
             <!-- small box -->
