dashboard : All checkouts & Registered user

--- a/Admin-Dashboard/dashboard.html
+++ b/Admin-Dashboard/dashboard.html
@@ -144,11 +144,7 @@
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-          <i class="fas fa-th-large"></i>
-        </a>
-      </li>
+
     </ul>
   </nav>
   <!-- /.navbar -->
@@ -194,12 +190,20 @@
               <p>Home</p>
             </a>
           </li>
+
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link">
+              <i class="nav-icon far fa-circle text-warning"></i>
+              <p>Manage User Account</p>
+            </a>
+          </li>
+
           <li class="nav-item">
             <a href="../contact_us.html" class="nav-link">
               <i class="nav-icon far fa-circle text-info"></i>
               <p>Contact</p>
             </a>
-          </li>
+          <li/>
 
           <li class="nav-item">
             <a href="../login.html" class="nav-link">
@@ -310,40 +314,40 @@
                       <th>Order ID</th>
                       <th>Item</th>
                       <th>Status</th>
-                      <th>Popularity</th>
+                      <th>Price</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR9842</a></td>
-                      <td>Call of Duty IV</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-success">Shipped</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
+                        <div class="sparkbar" data-color="#00a65a" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR1848</a></td>
-                      <td>Samsung Smart TV</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-warning">Pending</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#f39c12" data-height="20">90,80,-90,70,61,-83,68</div>
+                        <div class="sparkbar" data-color="#f39c12" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                      <td>iPhone 6 Plus</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-danger">Delivered</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#f56954" data-height="20">90,-80,90,70,-61,83,63</div>
+                        <div class="sparkbar" data-color="#f56954" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                      <td>Samsung Smart TV</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-info">Processing</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#00c0ef" data-height="20">90,80,-90,70,-61,83,63</div>
+                        <div class="sparkbar" data-color="#00c0ef" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
@@ -351,23 +355,23 @@
                       <td>Samsung Smart TV</td>
                       <td><span class="badge badge-warning">Pending</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#f39c12" data-height="20">90,80,-90,70,61,-83,68</div>
+                        <div class="sparkbar" data-color="#f39c12" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR7429</a></td>
-                      <td>iPhone 6 Plus</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-danger">Delivered</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#f56954" data-height="20">90,-80,90,70,-61,83,63</div>
+                        <div class="sparkbar" data-color="#f56954" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     <tr>
                       <td><a href="pages/examples/invoice.html">OR9842</a></td>
-                      <td>Call of Duty IV</td>
+                      <td>Beans Flour</td>
                       <td><span class="badge badge-success">Shipped</span></td>
                       <td>
-                        <div class="sparkbar" data-color="#00a65a" data-height="20">90,80,90,-70,61,-83,63</div>
+                        <div class="sparkbar" data-color="#00a65a" data-height="20">NGN 2200</div>
                       </td>
                     </tr>
                     </tbody>
@@ -592,8 +596,7 @@
 <script src="dist/js/adminlte.js"></script>
 <!-- IntrioBasket dashboard demo (This is only for demo purposes) -->
 <script src="dist/js/pages/dashboard.js"></script>
-<!-- IntrioBasket for demo purposes -->
-<script src="dist/js/demo.js"></script>
+
 
 
 <!--Config -->
