dashboard : All checkouts & Registered user

--- a/Admin-Dashboard/dashboard.html
+++ b/Admin-Dashboard/dashboard.html
@@ -539,7 +539,7 @@
   </div>
   <!-- /.content-wrapper -->
   <footer class="main-footer">
-    <strong>Copyright &copy; 2020 <a href="https://IntrioBasket.com">IntrioBasket.com</a>.</strong>
+    <strong>Copyright &copy; 2020 <a href="https://IntrioBasket.ng">IntrioBasket.ng</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
       <b>Developed</b> by Exceptos
