dashboard : All checkouts & Registered user

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -168,7 +168,7 @@
         </div>
       </div>
       <!-- End breadcrumb-->
-      < class="shop-layout">
+      <div class="shop-layout">
         <div class="ogami-container-fluid">
           <div class="row">
             <div class="col-12">
@@ -319,7 +319,7 @@
         </div>
       </footer>
       <!-- End footer-->
-  
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/jquery-ui.min.js"></script>
     <script src="assets/js/jquery.countdown.min.js"></script>
