Refactor: remove shopDetails.js file

--- a/index.html
+++ b/index.html
@@ -487,11 +487,11 @@
               </div>
               <div class="col-12 col-sm-6 text-sm-center text-md-left">
                 <div class="footer-quicklink">
-                  <h5>My Account</h5><a href="contact_us.html">Contact</a><a
-                    href="shop_cart.html">Shopping cart</a><a href="shop.html">Shop</a>
+                  <h5>My Account</h5><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a
+                    href="shop.html">Shop</a>
                 </div>
               </div>
-              
+
             </div>
           </div>
         </div>
@@ -556,9 +556,6 @@
   <!-- Services -->
   <script src="js/services/featuredProducts.js"></script>
 
-  <script src="js/services/shopDetails.js"></script>
-
-  
 </body>
 
 </html>
