--- a/shop_cart.html
+++ b/shop_cart.html
@@ -227,7 +227,7 @@
                 <tbody id="cartTotalTBody"></tbody>
               </table>
               <div class="checkout-method">
-                <button class="no-round-btn black cart-update">Proceed to Checkout</button>
+                <button class="no-round-btn black cart-update onclick="router('invoice')"">Proceed to Checkout</button>
                 <span><strong>- or -</strong></span><a href="shop_checkout.html"><strong>Check out with
                     PayPal</strong></a>
               </div>
