--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -196,6 +196,7 @@
         <div class="row">
           <div class="col-12">
             <div id="shopDOM" class="shop-detail shop-detail-fullwidth">
+            <div id="shopDetails">
               <div class="col-12">
                 <div class="shop-detail_more-info">
                   <div id="tab-so3">
@@ -204,7 +205,7 @@
                       <li><a href="#tab-2">SPECIFICATIONS</a></li>
                     </ul>
                     <div id="tab-1">
-                      <div id="shopDetails" class="description-block">
+                      <div class="description-block">
                         <!--<div class="description-item_block">
                               <div class="row align-items-center justify-content-around">
                                 <div class="col-12 col-md-4">
@@ -255,6 +256,7 @@
                     </div>
                   </div>
                 </div>
+              </div>
               </div>
             </div>
           </div>
