Shop details : including add to cart button

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -196,7 +196,7 @@
         <div class="row">
           <div class="col-12">
             <div id="shopDOM" class="shop-detail shop-detail-fullwidth">
-            <div id="shopDetails">
+            <!--<div id="shopDetails">
               <div class="col-12">
                 <div class="shop-detail_more-info">
                   <div id="tab-so3">
@@ -206,7 +206,7 @@
                     </ul>
                     <div id="tab-1">
                       <div class="description-block">
-                        <!--<div class="description-item_block">
+                        <div class="description-item_block">
                               <div class="row align-items-center justify-content-around">
                                 <div class="col-12 col-md-4">
                                   <div class="description-item_img"><img class="img-fluid" src="https://firebasestorage.googleapis.com/v0/b/intriobasket-a601d.appspot.com/o/food_images%2FCabbage.jpg?alt=media&token=6e282a59-3ff3-4c81-9ecf-1f81544c8354" alt="description image"></div>
@@ -258,7 +258,7 @@
                 </div>
               </div>
               </div>
-            </div>
+            </div>-->
           </div>
           <div class="col-12"></div>
         </div>
