Shop details : including add to cart button

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -222,7 +222,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>-->
+                            </div>
                       </div>
                     </div>
                   </div>
@@ -243,7 +243,7 @@
                       <input class="no-round-input" id="quantity" type="number" min="0" value="1">
                     </div>
 
-                    <!-- WRITE JAVASCRIPT FOR ADD TO CART FUNCTION-->
+                   WRITE JAVASCRIPT FOR ADD TO CART FUNCTION
 
                     <div class="product-select">
                       <button class="add-to-cart normal-btn outline">Add to Cart</button>
