Shop details : including add to cart button

--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -196,8 +196,8 @@
         <div class="row">
           <div class="col-12">
             <div id="shopDOM" class="shop-detail shop-detail-fullwidth">
-            <!--<div id="shopDetails">
-              <div class="col-12">
+            <div id="shopDetails">
+              <!--<div class="col-12">
                 <div class="shop-detail_more-info">
                   <div id="tab-so3">
                     <ul class="mb-0">
@@ -257,8 +257,8 @@
                   </div>
                 </div>
               </div>
-              </div>
-            </div>-->
+              </div>-->
+            </div>
           </div>
           <div class="col-12"></div>
         </div>
