Shop details : including add to cart button

--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -178,12 +178,12 @@
                 <div class="form-group">
                   <label for="inputCountry">Country*</label>
                   <select class="no-round-input-bg" id="inputContry">
-                    <option value="1">Vietnam</option>
+                    <option value="1">Nigeria</option>
                     <option value="2">USA</option>
                     <option value="3">Italy</option>
-                    <option value="4">China</option>
+                    <option value="4">South Africa</option>
                     <option value="5">Japan</option>
-                    <option value="6">Russia</option>
+                    <option value="6">Ghana</option>
                   </select>
                 </div>
                 <div class="form-group">
@@ -256,7 +256,7 @@
                     <input type="radio" name="paymethod" id="paypal" value="option2">
                     <label for="paypal">PayStack</label>
                   </div>
-                  <button class="no-round-btn submit-btn">Place order</button>
+                  <button class="no-round-btn submit-btn" onclick="router('shop_order_complete')">Place order</button>
                 </div>
               </div>
             </div>
