Shop details : including add to cart button

--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -52,7 +52,7 @@
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>NGR 150.00</span></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>NGN 150.00</span></a></div>
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
                       <tbody id="shopCartTBodyCheckout">
                         <tr>
                           <th class="name"> FLOOR </th>
-                          <td class="price black" style="border-top: 0">NGR 169.00</td>
+                          <td class="price black" style="border-top: 0">NGN 169.00</td>
                         </tr>
 
                       </tbody>
@@ -239,7 +239,7 @@
                         
                         <tr>
                           <th>TOTAL</th>
-                          <td class="total">NGR 169.00</td>
+                          <td class="total">NGN 169.00</td>
                         </tr>
                       </tbody>
                     </table>
