--- a/shop_checkout.html
+++ b/shop_checkout.html
@@ -350,7 +350,7 @@
     <script src="js/app.js"></script>
 
     <!-- Services -->
-    <script src="js/services/cart.js"></script>
+    <script src="js/services/checkout.js"></script>
   
   </body>
 </html>
