--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -285,7 +285,7 @@
               <tbody id="cartTotalTBody"></tbody>
             </table>
             <div class="checkout-method">
-              <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Proceed to Checkout</button>
+              <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Print Reciept</button>
             
             </div>
           </div>
