--- a/shop_cart.html
+++ b/shop_cart.html
@@ -221,9 +221,8 @@
                 <tbody id="cartTotalTBody"></tbody>
               </table>
               <div class="checkout-method">
-                <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Proceed to Checkout</button>
-                <span><strong>- or -</strong></span><a href="shop_checkout.html"><strong>Check out with
-                    PayPal</strong></a>
+                <button class="no-round-btn black cart-update" onclick="router('shop_order_complete')">Proceed to Checkout</button>
+                
               </div>
             </div>
           </div>
