--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -412,6 +412,24 @@
     <script src="assets/js/numscroller-1.0.js"></script>
     <script src="assets/js/vanilla-tilt.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script></script>
+
+
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/jquery.shop.js"></script>
+
+
+    <!--Config -->
+    <script src="config/constants.js"></script>
+
+    <!-- Utils -->
+    <script src="js/utils/api-request.js"></script>
+
+    <!-- App Logic -->
+    <script src="js/app.js"></script>
+
+    <!-- Services -->
+    <script src="js/services/checkout.js"></script>
+
   </body>
 </html>
