--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -54,7 +54,7 @@
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>NGR 150</span></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href="shop_cart.html">
                 </div>
               </div>
             </div>
