--- a/shop_cart.html
+++ b/shop_cart.html
@@ -306,7 +306,7 @@
             <tbody id="cartTotalTBody"></tbody>
           </table>
           <div class="checkout-method">
-            <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Proceed to Checkout</button>
+            <button class="no-round-btn black cart-update" onclick="router('shop_order_complete')">Proceed to Checkout</button>
             
           </div>
         </div>
