Shop details : including add to cart button

--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -200,7 +200,7 @@
                   <tbody id="cartTotalTBody"></tbody>
                 </table>
                 <div class="checkout-method">
-                  <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Print Reciept</button>
+                  <button class="no-round-btn black cart-update" onclick="window.print()">Print Reciept</button>
                   
                 </div>
               </div>
@@ -285,7 +285,7 @@
               <tbody id="cartTotalTBody"></tbody>
             </table>
             <div class="checkout-method">
-              <button class="no-round-btn black cart-update" onclick="router('shop_checkout')">Print Reciept</button>
+              <button class="no-round-btn black cart-update" onclick="window.print()">Print Reciept</button>
             
             </div>
           </div>
