Shop details : including add to cart button

--- a/shop_order_complete.html
+++ b/shop_order_complete.html
@@ -157,7 +157,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12 text-center">
-              <h1 class="title mx-auto">Your Shopping Cart</h1>
+              <h1 class="title mx-auto">Your Ordered Items</h1>
             </div>
             <div class="col-12">
               <div class="product-table">
