--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a class="menu-item active" href="index.html">Home</a>
                   </li>
                   <li class="toggleable">
-                    <a class="menu-item" href="shop.html">Shop</a>
+                    <a class="menu-item" href="shop.html">Shop Now</a>
                   </li>
                   <li class="toggleable">
                     <a class="menu-item" href="javascript:void()">Pages</a>
@@ -110,7 +110,7 @@
                           class="sub-menu--expander"><i class="icon_plus"></i></span>
 
                       </li>
-                      <li class="toggleable"><a class="menu-item" href="shop.html">Shop</a><span
+                      <li class="toggleable"><a class="menu-item" href="shop.html">Shop Now</a><span
                           class="sub-menu--expander"><i class="icon_plus"></i></span>
 
                       </li>
@@ -209,21 +209,53 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!-- <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span>
-                        </h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">
-                        Shop now</a>
-                     -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
-                        src="assets/images/homepage01/slider_subbackground_1.png" alt="">
-                      <div class="prallax-img">
-                        <div id="img-block"><img class="img" src="assets/images/homepage01/slider_img_1.png" alt=""
-                            data-depth="1"></div>
-                      </div>
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1ab.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1abc.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -236,10 +268,7 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!--<h5 data-animation="fadeInUp" data-delay=".2s">Butter Egg</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                     -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
@@ -258,16 +287,33 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!--<h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                      -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
-                        src="assets/images/homepage01/slider_img_1.png" alt="">
+                        src="assets/images/homepage01/slider_img_1abcd.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1abcde.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -488,7 +534,7 @@
               <div class="col-12 col-sm-6 text-sm-center text-md-left">
                 <div class="footer-quicklink">
                   <h5>My Account</h5><a href="contact_us.html">Contact</a><a href="shop_cart.html">Shopping cart</a><a
-                    href="shop.html">Shop</a>
+                    href="shop.html">Shop Now</a>
                 </div>
               </div>
 
