--- a/Homepage.html
+++ b/Homepage.html
@@ -214,19 +214,53 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!-- <h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                    -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
-                        src="assets/images/homepage01/slider_subbackground_1.png" alt="">
-                      <div class="prallax-img">
-                        <div id="img-block"><img class="img" src="assets/images/homepage01/slider_img_1.png" alt=""
-                            data-depth="1"></div>
-                      </div>
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1ab.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1abc.png" alt="">
                     </div>
                   </div>
                 </div>
@@ -239,10 +273,7 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!--<h5 data-animation="fadeInUp" data-delay=".2s">Butter Egg</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                    -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
@@ -261,16 +292,33 @@
                 <div class="row align-items-center justify-content-center">
                   <div class="col-12 col-md-5 col-xl-6">
                     <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
-                      <!--<h5 data-animation="fadeInUp" data-delay=".2s">Fruit Fresh</h5>
-                        <h1 data-animation="fadeInUp" data-delay=".3s">Orange Lemon</h1>
-                        <h3 data-animation="fadeInUp" data-delay=".4s">#14.00<span>/ pakage</span></h3><a class="normal-btn" href="shop.html" data-animation="fadeInUp" data-delay=".4s">Shop now</a>
-                      -->
+
                     </div>
                   </div>
                   <div class="col-12 col-md-6">
                     <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
                         src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
-                        src="assets/images/homepage01/slider_img_1.png" alt="">
+                        src="assets/images/homepage01/slider_img_1abcd.png" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slider-block" style="background-image: url('assets/images/homepage01/slider_background_1.png')">
+            <div class="slider-content">
+              <div class="container">
+                <div class="row align-items-center justify-content-center">
+                  <div class="col-12 col-md-5 col-xl-6">
+                    <div class="slider-text d-flex flex-column align-items-center align-items-md-start">
+
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="slider-img" data-animation="zoomIn" data-delay=".1s"><img
+                        src="assets/images/homepage01/slider_subbackground_1.png" alt=""><img class="img"
+                        src="assets/images/homepage01/slider_img_1abcde.png" alt="">
                     </div>
                   </div>
                 </div>
