--- a/index.html
+++ b/index.html
@@ -231,6 +231,9 @@
                     <li class="toggleable">
                       <a class="menu-item" href="shop.html">BAKING INGREDIENT</a>
                     </li>
+                    <li class="toggleable">
+                      <a class="menu-item" href="shop.html">FRUITS</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -518,7 +521,7 @@
           </div>
           <div class="col-12 col-md-12 col-lg-4 order-2 order-md-4 order-lg-3 text-center">
             <div class="week-product_img"><img class="img-fluid" src="assets/images/product/product02.png" alt="">
-              <p>Only<br><span>#19.00</span></p>
+              <p>Only<br><span>#2200</span></p>
             </div>
           </div>
           <div class="col-10 col-md-6 col-lg-4 order-4 order-md-3 order-lg-4">
