--- a/shop_cart.html
+++ b/shop_cart.html
@@ -114,13 +114,15 @@
             <div class="col-3">
               <div class="mobile-product_function d-flex align-items-center justify-content-end">
               
-              <!--<a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a>-->
+  
 
               <div id="cartButton" class="function-icon hover">
                 <i class="fa fa fa-shopping-cart"></i>
                 <sup style="top: -.5em">
                   <span id="cartButtonBadge" class="my-badge badge-success">0</span>
                 </sup>
+              </div>
+
               </div>
 
 
