Shop details : including add to cart button

--- a/index.html
+++ b/index.html
@@ -229,16 +229,16 @@
                   <ul class="mb-0">
                   
                     <li class="toggleable">
-                      <a class="menu-item active" href="index.html">MEAT & FISH</a>
+                      <a class="menu-item active" href="shop4.html">MEAT & FISH</a>
                     </li>
                     <li class="toggleable">
-                      <a class="menu-item" href="shop.htmlshop">TUBER</a>
+                      <a class="menu-item" href="shop3.html">TUBER</a>
                     </li>
                     <li class="toggleable">
-                      <a class="menu-item" href="shop.html">FLOUR</a>
+                      <a class="menu-item" href="shop1.html">FLOUR</a>
                     </li>
                     <li class="toggleable">
-                      <a class="menu-item" href="shop.html">VEGETABLE</a>
+                      <a class="menu-item" href="shop2.html">VEGETABLE</a>
                     </li>
                     <li class="toggleable">
                       <a class="menu-item" href="shop.html">BAKING INGREDIENT</a>
